--- a/ComicBookLibraryManager/ComicBookLibraryManager.csproj
+++ b/ComicBookLibraryManager/ComicBookLibraryManager.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\Repository.cs" />
     <Compile Include="Helpers\ConsoleHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
